2nd training/Community/Community/Community1/force-app/main/default/objects/Work_Order__c/fields/Origin__c.field-meta.xml
<CustomField>
    <fullName>Origin__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Origin</label>
    <type>Checkbox</type>
</CustomField>