2nd training/Community/Community/Community1/force-app/main/default/objects/Work_Order__c/fields/Others_Specify__c.field-meta.xml
<CustomField>
    <fullName>Others_Specify__c</fullName>
    <label>Others Specify</label>
    <length>100</length>
    <type>Text</type>
</CustomField>