2nd training/Community/Community/Community1/force-app/main/default/objects/Work_Order__c/fields/Pack_Date__c.field-meta.xml
<CustomField>
    <fullName>Pack_Date__c</fullName>
    <label>Pack Date</label>
    <type>Date</type>
</CustomField>