2nd training/Community/Community/Community1/force-app/main/default/objects/Work_Order__c/fields/Pack_Type__c.field-meta.xml
<CustomField>
    <fullName>Pack_Type__c</fullName>
    <label>Pack Type</label>
    <length>20</length>
    <type>Text</type>
</CustomField>