2nd training/Community/Community/Community1/force-app/main/default/objects/Work_Order__c/fields/Packing_Address__c.field-meta.xml
<CustomField>
    <fullName>Packing_Address__c</fullName>
    <label>Packing Address</label>
    <type>TextArea</type>
</CustomField>