2nd training/Community/Community/Community1/force-app/main/default/objects/Work_Order__c/fields/Packing_Materials__c.field-meta.xml
<CustomField>
    <fullName>Packing_Materials__c</fullName>
    <description>Requirement for Packing Materials</description>
    <label>Packing Materials</label>
    <type>TextArea</type>
</CustomField>