2nd training/Community/Community/Community1/force-app/main/default/objects/Work_Order__c/fields/Patch_Holes__c.field-meta.xml
<CustomField>
    <fullName>Patch_Holes__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Patch Holes</label>
    <type>Checkbox</type>
</CustomField>