2nd training/Community/Community/Community1/force-app/main/default/objects/Work_Order__c/fields/Piano_Handling__c.field-meta.xml
<CustomField>
    <fullName>Piano_Handling__c</fullName>
    <label>Piano Handling</label>
    <type>DateTime</type>
</CustomField>