2nd training/Community/Community/Community1/force-app/main/default/objects/Work_Order__c/fields/Piano_Handling_New__c.field-meta.xml
<CustomField>
    <fullName>Piano_Handling_New__c</fullName>
    <defaultValue>&quot;Vendor: &quot;&amp; BR() &amp;
&quot;Date of service: dd/mm/yy&quot;&amp; BR() &amp;
&quot;Time of service: hrs&quot;</defaultValue>
    <label>Piano Handling New</label>
    <type>TextArea</type>
</CustomField>