2nd training/Community/Community/Community1/force-app/main/default/objects/Work_Order__c/fields/Piano_Services__c.field-meta.xml
<CustomField>
    <fullName>Piano_Services__c</fullName>
    <label>Piano Services</label>
    <length>45</length>
    <type>Text</type>
</CustomField>