2nd training/Community/Community/Community1/force-app/main/default/objects/Work_Order__c/fields/Piano_ServicesB__c.field-meta.xml
<CustomField>
    <fullName>Piano_ServicesB__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Piano Services</label>
    <type>Checkbox</type>
</CustomField>