2nd training/Community/Community/Community1/force-app/main/default/objects/Work_Order__c/fields/Piano_Type__c.field-meta.xml
<CustomField>
    <fullName>Piano_Type__c</fullName>
    <label>Piano Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Upright</fullName>
            </value>
            <value>
                <fullName>Baby</fullName>
            </value>
            <value>
                <fullName>Grand</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>