2nd training/Community/Community/Community1/force-app/main/default/objects/Work_Order__c/fields/Pickup_AddressN__c.field-meta.xml
<CustomField>
    <fullName>Pickup_AddressN__c</fullName>
    <label>Pickup Address</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>HT WAREHOUSE</fullName>
            </value>
            <value>
                <fullName>CONTAINER YARD TO RESIDENCE</fullName>
            </value>
            <value>
                <fullName>CONTAINER YARD TO WAREHOUSE</fullName>
            </value>
            <value>
                <fullName>CONTAINER FROM WAREHOUSE TO RESIDENCE</fullName>
            </value>
            <value>
                <fullName>CONTAINER FREIGHT STATION (CFS)</fullName>
            </value>
            <value>
                <fullName>SATS</fullName>
            </value>
            <value>
                <fullName>DNATA</fullName>
            </value>
            <value>
                <fullName>SKYLEADER FREIGHT</fullName>
            </value>
            <value>
                <fullName>RESIDENCE</fullName>
            </value>
            <value>
                <fullName>OTHER AIRFREIGHT FORWARDER</fullName>
            </value>
            <value>
                <fullName>SINGAPORE FREEPORT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>