2nd training/Community/Community/Community1/force-app/main/default/objects/Work_Order__c/fields/Rate_Based_On__c.field-meta.xml
<CustomField>
    <fullName>Rate_Based_On__c</fullName>
    <label>Rate Based On</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>US$</fullName>
            </value>
            <value>
                <fullName>SG$</fullName>
            </value>
            <value>
                <fullName>EURO</fullName>
            </value>
            <value>
                <fullName>YEN</fullName>
            </value>
            <value>
                <fullName>Canadian $</fullName>
            </value>
            <value>
                <fullName>Swedish Kr</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>