2nd training/Community/Community/Community1/force-app/main/default/objects/Work_Order__c/fields/Requested_by__c.field-meta.xml
<CustomField>
    <fullName>Requested_by__c</fullName>
    <label>Salesperson</label>
    <length>45</length>
    <type>Text</type>
</CustomField>