2nd training/Community/Community/Community1/force-app/main/default/objects/Work_Order__c/fields/Residence__c.field-meta.xml
<CustomField>
    <fullName>Residence__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Residence</label>
    <type>Checkbox</type>
</CustomField>