2nd training/Community/Community/Community1/force-app/main/default/objects/Work_Order__c/fields/Safe_Removal__c.field-meta.xml
<CustomField>
    <fullName>Safe_Removal__c</fullName>
    <label>Safe Removal</label>
    <type>DateTime</type>
</CustomField>