2nd training/Community/Community/Community1/force-app/main/default/objects/Work_Order__c/fields/Safe_RemovalB__c.field-meta.xml
<CustomField>
    <fullName>Safe_RemovalB__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Safe Removal</label>
    <type>Checkbox</type>
</CustomField>