2nd training/Community/Community/Community1/force-app/main/default/objects/Work_Order__c/fields/Sales_Remarks__c.field-meta.xml
<CustomField>
    <fullName>Sales_Remarks__c</fullName>
    <label>CS Remarks</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>