2nd training/Community/Community/Community1/force-app/main/default/objects/Work_Order__c/fields/Shipment_Details__c.field-meta.xml
<CustomField>
    <fullName>Shipment_Details__c</fullName>
    <label>Shipment Details</label>
    <length>20</length>
    <type>Text</type>
</CustomField>