2nd training/Community/Community/Community1/force-app/main/default/objects/Work_Order__c/fields/Shipment_Type__c.field-meta.xml
<CustomField>
    <fullName>Shipment_Type__c</fullName>
    <label>Shipment Type</label>
    <type>TextArea</type>
</CustomField>