2nd training/Community/Community/Community1/force-app/main/default/objects/Work_Order__c/fields/Shipper_s_ETD_S_Pore__c.field-meta.xml
<CustomField>
    <fullName>Shipper_s_ETD_S_Pore__c</fullName>
    <label>Shipper&apos;s ETD S&apos;Pore</label>
    <type>Date</type>
</CustomField>