2nd training/Community/Community/Community1/force-app/main/default/objects/Work_Order__c/fields/Shipper_s_NameF__c.field-meta.xml
<CustomField>
    <fullName>Shipper_s_NameF__c</fullName>
    <formula>Opportunity__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Shipper&apos;s Name</label>
    <type>Text</type>
</CustomField>