2nd training/Community/Community/Community1/force-app/main/default/objects/Work_Order__c/fields/Shippers_Name__c.field-meta.xml
<CustomField>
    <fullName>Shippers_Name__c</fullName>
    <label>Shipper&apos;s Name</label>
    <length>150</length>
    <type>Text</type>
</CustomField>