2nd training/Community/Community/Community1/force-app/main/default/objects/Work_Order__c/fields/Shuttle__c.field-meta.xml
<CustomField>
    <fullName>Shuttle__c</fullName>
    <label>Shuttle Required</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>