2nd training/Community/Community/Community1/force-app/main/default/objects/Work_Order__c/fields/Shuttle_Service__c.field-meta.xml
<CustomField>
    <fullName>Shuttle_Service__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Shuttle Service</label>
    <type>Checkbox</type>
</CustomField>