2nd training/Community/Community/Community1/force-app/main/default/objects/Work_Order__c/fields/Spec_Requirements__c.field-meta.xml
<CustomField>
    <fullName>Spec_Requirements__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Spec. Requirements</label>
    <type>Checkbox</type>
</CustomField>