2nd training/Community/Community/Community1/force-app/main/default/objects/Work_Order__c/fields/Stair_Carry_List_of_items__c.field-meta.xml
<CustomField>
    <fullName>Stair_Carry_List_of_items__c</fullName>
    <label>Stair Carry - List of items</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>