2nd training/Community/Community/Community1/force-app/main/default/objects/Work_Order__c/fields/Staircarry_Destination__c.field-meta.xml
<CustomField>
    <fullName>Staircarry_Destination__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Staircarry (Destination)</label>
    <type>Checkbox</type>
</CustomField>