2nd training/Community/Community/Community1/force-app/main/default/objects/Work_Order__c/fields/Stairs_Carry__c.field-meta.xml
<CustomField>
    <fullName>Stairs_Carry__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Stairs Carry</label>
    <type>Checkbox</type>
</CustomField>