2nd training/Community/Community/Community1/force-app/main/default/objects/Work_Order__c/fields/Storage_Required__c.field-meta.xml
<CustomField>
    <fullName>Storage_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Storage Required</label>
    <type>Checkbox</type>
</CustomField>