2nd training/Community/Community/Community1/force-app/main/default/objects/Work_Order__c/fields/Superdry_Pole__c.field-meta.xml
<CustomField>
    <fullName>Superdry_Pole__c</fullName>
    <label>Superdry Pole</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>20 FT - 4 pcs</fullName>
            </value>
            <value>
                <fullName>40FT &amp; HC - 6 pcs</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>