2nd training/Community/Community/Community1/force-app/main/default/objects/Work_Order__c/fields/Telephone__c.field-meta.xml
<CustomField>
    <fullName>Telephone__c</fullName>
    <label>Shipper&apos;sTelephone</label>
    <type>Phone</type>
</CustomField>