2nd training/Community/Community/Community1/force-app/main/default/objects/Work_Order__c/fields/Time__c.field-meta.xml
<CustomField>
    <fullName>Time__c</fullName>
    <label>Time</label>
    <length>25</length>
    <type>Text</type>
</CustomField>