2nd training/Community/Community/Community1/force-app/main/default/objects/Work_Order__c/fields/To_arrive_at_client_s__c.field-meta.xml
<CustomField>
    <fullName>To_arrive_at_client_s__c</fullName>
    <label>To arrive at client&apos;s</label>
    <type>Date</type>
</CustomField>