2nd training/Community/Community/Community1/force-app/main/default/objects/Work_Order__c/fields/Unstuffing_Loading_Date__c.field-meta.xml
<CustomField>
    <fullName>Unstuffing_Loading_Date__c</fullName>
    <label>Unstuffing/Loading Date</label>
    <type>Date</type>
</CustomField>