2nd training/Community/Community/Community1/force-app/main/default/objects/Work_Order__c/fields/Warehouse__c.field-meta.xml
<CustomField>
    <fullName>Warehouse__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Warehouse</label>
    <type>Checkbox</type>
</CustomField>