2nd training/Community/Community/Community1/force-app/main/default/objects/Work_Order__c/fields/Waterbed__c.field-meta.xml
<CustomField>
    <fullName>Waterbed__c</fullName>
    <label>Waterbed</label>
    <length>45</length>
    <type>Text</type>
</CustomField>