2nd training/Community/Community/Community1/force-app/main/default/objects/Work_Order__c/fields/WaterbedB__c.field-meta.xml
<CustomField>
    <fullName>WaterbedB__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Waterbed</label>
    <type>Checkbox</type>
</CustomField>