2nd training/Community/Community/Community1/force-app/main/default/objects/Work_Order__c/fields/WaterbedDT__c.field-meta.xml
<CustomField>
    <fullName>WaterbedDT__c</fullName>
    <description>Waterbed datetime field</description>
    <label>Waterbed</label>
    <type>DateTime</type>
</CustomField>