2nd training/Community/Community/Community1/force-app/main/default/objects/Work_Order__c/fields/Weighing_scale_required_date__c.field-meta.xml
<CustomField>
    <fullName>Weighing_scale_required_date__c</fullName>
    <label>Weighing scale required date</label>
    <type>Date</type>
</CustomField>