2nd training/Community/Community/Community1/force-app/main/default/objects/Work_Order__c/fields/X20_FT_Container_Warehouse__c.field-meta.xml
<CustomField>
    <fullName>X20_FT_Container_Warehouse__c</fullName>
    <defaultValue>false</defaultValue>
    <label>20 FT Container (Warehouse)</label>
    <type>Checkbox</type>
</CustomField>