2nd training/Community/Community/Community1/force-app/main/default/objects/Work_Order__c/fields/X40_HC_Container_Residence__c.field-meta.xml
<CustomField>
    <fullName>X40_HC_Container_Residence__c</fullName>
    <defaultValue>false</defaultValue>
    <label>40 HC Container (Residence)</label>
    <type>Checkbox</type>
</CustomField>