2nd training/Community/Community/Community1/force-app/main/default/objects/Work_Order__c/recordTypes/Air_export.recordType-meta.xml
<RecordType>
    <fullName>Air_export</fullName>
    <active>true</active>
    <description>Work Order Outbound Air Export</description>
    <label>Air_Export</label>
</RecordType>