2nd training/Community/Community/Community1/force-app/main/default/objects/Work_Order__c/recordTypes/Inbound.recordType-meta.xml
<RecordType>
    <fullName>Inbound</fullName>
    <active>true</active>
    <description>Inbound WO for Household Goods</description>
    <label>Inbound</label>
</RecordType>