2nd training/Community/Community/Community1/force-app/main/default/objects/Work_Order__c/recordTypes/LocalMove.recordType-meta.xml
<RecordType>
    <fullName>LocalMove</fullName>
    <active>true</active>
    <description>WO for Local Move</description>
    <label>Local Move</label>
</RecordType>