2nd training/Community/Community/Community1/force-app/main/default/objects/Work_Order__c/recordTypes/Outbound.recordType-meta.xml
<RecordType>
    <fullName>Outbound</fullName>
    <active>true</active>
    <description>Outbound WO for Household Goods</description>
    <label>Outbound</label>
</RecordType>