2nd training/Community/Community/Community1/force-app/main/default/objects/Work_Order__c/recordTypes/Sea_Export.recordType-meta.xml
<RecordType>
    <fullName>Sea_Export</fullName>
    <active>true</active>
    <description>Work Order Outbound Sea Export</description>
    <label>Sea_Export</label>
</RecordType>