2nd training/Community/Community/Community1/force-app/main/default/objects/Work_Order__c/recordTypes/Warehousing.recordType-meta.xml
<RecordType>
    <fullName>Warehousing</fullName>
    <active>true</active>
    <description>Warehousing WO</description>
    <label>Warehousing</label>
</RecordType>